<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILNombrePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILNombrePaciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombrePaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILEspecialista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILEspecialista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILNombrePaciente"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEspecialista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILObservaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILEspecialista"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtObservaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILPrecioConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILPrecioConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILObservaciones"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrecioConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILNumHistoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILNumHistoria"
        app:layout_constraintEnd_toStartOf="@+id/txtILNumCama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILPrecioConsulta"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNumHistoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILNumCama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILNumCama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtILNumHistoria"
        app:layout_constraintTop_toBottomOf="@+id/txtILPrecioConsulta"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNumCama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILEnlace1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILEnlace1"
        app:layout_constraintEnd_toStartOf="@+id/txtILEnlace2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILNumHistoria"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEnlace1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtILEnlace2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/strtxtILEnlace2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtILEnlace1"
        app:layout_constraintTop_toBottomOf="@+id/txtILNumCama"
        style="@style/Widget.USAT.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEnlace2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/strBtnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtILEnlace2"
        style="@style/Widget.USAT.Button"/>


</androidx.constraintlayout.widget.ConstraintLayout>